# CodebaseExplainer

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  Modelfile  README.md  REFACTORING_SUMMARY.md  TASKS.md  pyproject.toml  requirements.txt  setup_custom_model.md  setup_venv.sh
config/: config.yaml
config/prompts/: onboarding.txt
docs/: REFACTORING.md  VENV_CLEANUP.md  api.md  llm_backend_refactor_plan.md  platform_services_architecture.md
docs/archived/: IMPLEMENTATION_PLAN.md  REFACTORING_TASKS.md  TASKS.md  VERIFICATION_REPORT.md
docs/planning/: codehierarchy_design.tsx
output/: CODEBASE_EXPLAINER.md
output/index/: keyword.db  mapping.pkl  vector.index
services/: README.md  docker-compose.yml
services/content-intelligence/: Dockerfile  README.md  pyproject.toml
services/content-intelligence/src/cis/: __init__.py  config.py  orchestrator.py
services/content-intelligence/src/cis/api/: __init__.py  main.py
services/content-intelligence/src/cis/core/: __init__.py  chunker.py  completeness.py  dependency_graph.py  hybrid_index.py  reranker.py
services/content-intelligence/src/cis/models/: __init__.py  schemas.py
services/content-intelligence/src/cis/storage/: __init__.py  ast_cache.py  index_persistence.py
services/content-intelligence/tests/: conftest.py  test_api.py  test_chunker.py  test_completeness.py  test_dependency_graph.py  test_hybrid_index.py
services/llm-summarization/: Dockerfile  README.md  pyproject.toml
services/llm-summarization/src/lss/: __init__.py
services/llm-summarization/src/lss/api/: __init__.py  main.py
services/llm-summarization/src/lss/backends/: __init__.py  anthropic_backend.py  base.py  openai_backend.py
services/llm-summarization/src/lss/core/: __init__.py  prompt_registry.py  summary_engine.py
services/llm-summarization/src/lss/models/: __init__.py  schemas.py
services/llm-summarization/tests/: conftest.py  test_api.py  test_prompt_registry.py  test_summary_engine.py
src/codehierarchy/: __init__.py
src/codehierarchy/analysis/: __init__.py
src/codehierarchy/cli/: cli.py
src/codehierarchy/config/: __init__.py  config.yaml  loader.py  schema.py
src/codehierarchy/core/: __init__.py
src/codehierarchy/graph/: graph_builder.py
src/codehierarchy/interface/: __init__.py
src/codehierarchy/llm/: deepseek_summarizer.py  validator.py
src/codehierarchy/parser/: call_graph_analyzer.py  node_extractor.py  parallel_parser.py  tree_sitter_parser.py
src/codehierarchy/pipeline/: orchestrator.py
src/codehierarchy/scanner/: file_scanner.py
src/codehierarchy/search/: result.py
src/codehierarchy/utils/: __init__.py  language_detector.py  logger.py  profiler.py
tests/: README_TESTING.md  run_tests.py
tests/analysis/: __init__.py
tests/analysis/graph/: test_graph_builder.py
tests/analysis/parser/: test_call_graph_analyzer.py  test_node_extractor.py  test_tree_sitter_parser.py
tests/analysis/scanner/: test_file_scanner.py
tests/config/: test_config_loader.py
tests/core/: __init__.py
tests/core/llm/: test_deepseek_summarizer.py  (+2 more)
tests/graph/: test_graph_builder.py
tests/integration/: test_pipeline.py
tests/interface/: __init__.py
tests/llm/: test_deepseek_summarizer.py
tests/parser/: test_call_graph_analyzer.py  test_node_extractor.py  test_tree_sitter_parser.py
tests/search/: test_embedder.py  test_search_engine.py
(+40 files in other folders)
