[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codehierarchy"
version = "0.1.0"
description = "A high-performance codebase documentation and search system powered by DeepSeek Coder V2"
authors = [
  { name="CodebaseExplainer Team", email="team@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "networkx>=3.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "psutil>=5.9.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
codehierarchy = "codehierarchy.interface.cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codehierarchy = ["config/*.yaml", "config/prompts/*.txt"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = "^(tests/|docs/|output/|scripts/|src/)"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.flake8]
exclude = [
    ".venv",
    "build",
    "dist",
    "docs",
    "output",
    "tests",
    "scripts",
    "src"
]
# You can also ignore specific error codes entirely
# ignore = ["E501", "W503"] 
# max-line-length = 120 
